식당 상세 페이지

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
     -->
     <script
       type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=2e405ee2d36cc0c78c824132f2d13b40"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=2e405ee2d36cc0c78c824132f2d13b40&libraries=services,clusterer,drawing"
     ></script>
     ;
   </body>
